# orkg-templates-recommendation

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: dataset.json  dataset_analyzed.json  dataset_premises.json  test_set.json  test_set_baseline_evaluated.json  test_set_baseline_full_evaluated.json  test_set_es_evaluated.json  test_set_scibert_evaluated.json  validation_set.json
data/raw/: baseline_templates.json  neutral_papers.json  templated_papers.json
models/: baseline.json  baseline_full.json
models/orkgnlp-templates-recommendation-scibert/: config.json
notebooks/: templates_recommendation_training.ipynb
src/: __init__.py  main.py
src/data/: analyze_dataset.py  fetch_baseline_templates.py  fetch_neutral_papers.py  fetch_templated_papers.py  main.py  make_dataset.py  split_dataset.py
src/data/sparql/: queries.py
src/models/: evaluate.py  predict.py  train.py
src/models/baseline/: service.py
src/models/elasticsearch/: document.py  service.py
src/models/scibert/: service.py
src/util/: visualization.py
