[tool.poetry]
name = "."
version = "0.1.0"
description = ""
authors = ["Omar Arab Oghli <omar.araboghli@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
SPARQLWrapper = "2.0.0"
pandas = "1.3.5"
matplotlib = "3.5.2"
elasticsearch = "7.13.0"
transformers = "4.21.1"
torch = "1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
